# EvoArena

./: .gitignore  README.md
EvoMem-PersonaMem-Evo/: .env.example  .gitignore  README.md  memory_layer.py  memory_layer_patch.py  memory_layer_robust.py  test_persona_patch.py  test_persona_robust.py  test_persona_robust_logic.py
EvoMem-PersonaMem-Evo/data/chat_history_32k/: chat_history_260316_065208_persona0.json  chat_history_260316_065208_persona1.json  chat_history_260316_065208_persona10.json  chat_history_260316_065208_persona11.json  chat_history_260316_065208_persona20.json  chat_history_260316_065208_persona21.json  chat_history_260316_065208_persona40.json  (+3 more)
EvoMem-PersonaMem-Evo/scripts/: evaluate_persona_chain_acc.py  run_persona_baseline_patch.sh
EvoMem-TerminalBench-Evo/: .gitignore  README.md
EvoMem-TerminalBench-Evo/harbor_EvoMem/: pyproject.toml
EvoMem-TerminalBench-Evo/harbor_EvoMem/harbor_EvoMem/: __init__.py  chain_id.py  family_trace_memory.py  memory_bridge.py  patch_capture.py
EvoMem-TerminalBench-Evo/harbor_EvoMem/harbor_EvoMem/agents/: __init__.py  terminus2_baseline.py  terminus2_evomem.py  terminus2_git_capture.py  terminus2_llm_sync.py
EvoMem-TerminalBench-Evo/harbor_EvoMem/harbor_EvoMem/memory/: __init__.py  summarizer.py
EvoMem-TerminalBench-Evo/harbor_EvoMem/scripts/: _dispatch.sh  _ensure_terminus2_llm_env.sh  kill_runs.sh  launch_runs.sh  launch_terminus2_baseline.sh  launch_terminus2_evomem.sh  list_chains.py  run_chain.py  status.py  terminus2_llm.env.example
docs/: index.html
project_page/: index.html
(+2 files in other folders)
